--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -18,7 +18,7 @@
 
 <% if can? :destroy, @store %>
 <div class="form-group mt-3">
-  <%= link_to t('views.shared.delete'), admin_pin_path(@store), method: :delete, data: { confirm: t('views.shared.delete_confirmation') }, class: 'btn btn-block btn-danger mt-2' %>
+  <%= link_to t('views.shared.delete'), admin_pin_path(@store), method: :delete, data: { confirm: t('views.shared.delete_pin_confirmation') }, class: 'btn btn-block btn-danger mt-2' %>
 </div>
 <% end %>
 <% end %>
