--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,74 +1,27 @@
-<% content_for :page_title, User.model_name.human(count: 2) %>
+<% content_for :title do %>
+<%= t('views.shared.users') %>
+<% end %>
 
-<div class="row mt-3">
-  <div class="col-md-11">
-    <h1><%= User.model_name.human(count: 2) %></h1>
-  </div>
-  <% if can? :new, User %>
-    <div class="col-md-1">
-      <%= link_to t('views.actions.new'), new_admin_user_path, class: 'btn btn-sm btn-outline-primary' %>
-    </div>
-  <% end %>
+<% if can? :new, User %>
+<% content_for :title_options do %>
+<%= link_to t('views.shared.new_user'), new_admin_user_path, class: 'btn btn-primary' %>
+<% end %>
+<% end %>
+
+<%= form_tag admin_users_path, method: :get do %>
+<div class="form-group">
+  <%= label_tag :role, t('views.admin.users.role'), class: 'sr-only' %>
+  <%= select_tag :role, options_for_select(enum_options_for_select(User, :role), params[:role]), { include_blank: t('views.admin.users.all_roles'), class: 'custom-select' }%>
 </div>
-
-<div class="row mt-2">
-  <div class="col-md-12">
-    <%= form_tag admin_users_path, method: :get, class: 'form-inline' do %>
-      <%= label_tag :search, 'Search', class: 'sr-only' %>
-      <%= text_field_tag :search, params[:search], class: 'form-control col-md-5 mb-2 mr-sm-2',
-        placeholder: t('views.users.search.placeholder') %>
-      <%= label_tag :role, 'Role', class: 'sr-only' %>
-      <%= select_tag :role, options_for_select(enum_options_for_select(User, :role), params[:role]),
-        {include_blank: t('views.users.search.filter_role'), class: 'form-control col-md-3 mb-2 mr-sm-2'} %>
-      <%= label_tag :created_stores, 'Created stores', class: 'sr-only' %>
-      <% arr = [[t('views.users.search.word_yes')]] %>
-      <%= submit_tag t('views.users.search.button'),
-        class: 'btn btn-primary mb-2' %>
-    <% end %>
-  </div>
+<div class="form-group">
+  <%= label_tag :search, t('views.shared.search'), class: 'sr-only' %>
+  <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: t('views.admin.users.search_by_name') %>
 </div>
+<div class="form-group">
+  <%= submit_tag t('views.shared.search'), class: 'btn btn-black' %>
+</div>
+<% end %>
 
-<div class="row">
-  <div class="col-md-12">
-    <div class="main-card mb-3 card">
-      <div class="card-body">
-        <%= page_entries_info @users %>
-        <div class="table-responsive">
-          <table class="table table-sm">
-            <thead>
-              <tr>
-                <th><%= User.human_attribute_name(:name) %></th>
-                <th><%= User.human_attribute_name(:email) %></th>
-                <th><%= User.human_attribute_name(:role) %></th>
-                <th><%= t('views.users.index.stores_created') %></th>
-                <th><%= t('views.actions.title') %></th>
-              </tr>
-            </thead>
-
-            <tbody>
-              <% @users.each do |user| %>
-                <tr>
-                  <td><%= user.name %></td>
-                  <td><%= user.email %></td>
-                  <td><%= enum_l(user, :role) %></td>
-                  <td><%= user.created_stores.count %></td>
-                  <td>
-                    <%= link_to t('views.actions.show'), admin_user_path(user) %>
-                    <% if can? :edit, user %>
-                      |
-                      <%= link_to t('views.actions.edit'), edit_admin_user_path(user) %>
-                    <% end %>
-                    <% if can? :destroy, user %>
-                      |
-                      <%= link_to t('views.actions.destroy'), admin_user_path(user), method: :delete, data: { confirm: t('views.actions.confirm_destroy') } %>
-                    <% end %>
-                </tr>
-              <% end %>
-            </tbody>
-          </table>
-          <%= paginate @users %>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="mt-5">
+  <%= render 'table', users: @users %>
 </div>
