--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,9 +1,11 @@
-<% content_for :page_title, t('views.actions.new', resource: User.model_name.human) %>
+<% content_for :title do %>
+<%= t('views.shared.new_user') %>
+<% end %>
 
-<div class="row mt-3">
-  <div class="col-md-11">
-    <h1><%= "#{t('views.actions.new')} #{User.model_name.human(count: 1)}" %></h1>
-  </div>
+<%= form_for(@user, url: new_admin_user_path(@user), class: 'mt-5') do |f| %>
+<%= render partial: 'form', locals: { f: f } %>
+
+<div class="form-group mt-5">
+  <%= f.submit t('views.shared.save'), class: "btn btn-block btn-black" %>
 </div>
-
-<%= render 'form', user: @user %>
+<% end %>
