--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -90,7 +90,7 @@
               </svg>
               <%= t('views.shared.edit') %>
             </a>
-            <a data-href="<%= pin_path(':id') %>" data-method="delete" data-confirm="<%= t('views.shared.delete_confirmation') %>" class="btn btn-block btn-black mt-0 js-delete">
+            <a data-href="<%= pin_path(':id') %>" data-method="delete" data-confirm="<%= t('views.shared.delete_pin_confirmation') %>" class="btn btn-block btn-black mt-0 js-delete">
               <%= t('views.shared.delete') %>
             </a>
           </div>
