--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,8 +1,8 @@
 <div id="drawer" class="dialog-container" aria-hidden="true">
   <div tabindex="-1" data-a11y-dialog-hide></div>
   <div role="dialog" aria-label="<%= t("views.map.drawer_menu") %>" class="d-flex flex-column c-drawer">
-    <div class="flex-shrink-0 pt-5 pb-4 background-black">
-      <div class="container">
+    <div class="flex-shrink-0 pt-5 pb-4 pt-md-6 background-black">
+      <div class="container px-md-5">
         <% if user_signed_in? %>
         <%= current_user.display_name %>
         <% else %>
@@ -10,8 +10,8 @@
         <% end %>
       </div>
     </div>
-    <div class="flex-grow-1 pt-4 pb-5 d-flex flex-column justify-content-between background-white">
-      <div class="container">
+    <div class="flex-grow-1 pt-4 pb-5 pt-md-5 pb-md-6 d-flex flex-column justify-content-between background-white">
+      <div class="container px-md-5">
         <label for="map-view"><%= t('views.map.map_view') %></label>
         <select class="custom-select js-map-view">
           <option value="standard"><%= t('views.map.standard') %></option>
@@ -26,16 +26,18 @@
         </div>
 
         <% if user_signed_in? && current_user.admin? %>
-        <%= link_to t("views.map.all_pins"), admin_pins_path, class: 'd-block mt-3' %>
-        <%= link_to t("views.map.approve_pins"), admin_pins_path(state: :waiting_approval), class: 'd-block mt-2' %>
-        <%= link_to t("views.map.approve_changes"), admin_pins_path(state: :to_replace), class: 'd-block mt-2' %>
-        <%= link_to t("views.map.users"), admin_users_path, class: 'd-block mt-2' %>
+        <div class="mt-3 mt-md-5">
+          <%= link_to t("views.map.all_pins"), admin_pins_path, class: 'd-block' %>
+          <%= link_to t("views.map.approve_pins"), admin_pins_path(state: :waiting_approval), class: 'd-block mt-2 mt-md-3' %>
+          <%= link_to t("views.map.approve_changes"), admin_pins_path(state: :to_replace), class: 'd-block mt-2 mt-md-3' %>
+          <%= link_to t("views.map.users"), admin_users_path, class: 'd-block mt-2 mt-md-3' %>
+        </div>
         <% end %>
       </div>
-      <div class="container">
+      <div class="container px-md-5">
         <% if user_signed_in? %>
-        <%= link_to t("views.shared.edit_profile"), edit_user_registration_path, class: 'd-block mb-2' %>
-        <%= link_to t("views.shared.log_out"), destroy_user_session_path, class: 'd-block' %>
+        <%= link_to t("views.shared.edit_profile"), edit_user_registration_path, class: 'd-block' %>
+        <%= link_to t("views.shared.log_out"), destroy_user_session_path, class: 'd-block mt-2 mt-md-3' %>
         <% end %>
       </div>
     </div>
@@ -49,23 +51,29 @@
     <div class="background-black">
       <div class="container">
         <div class="position-relative">
-          <button type="button" class="position-absolute mt-2 btn btn-black" data-a11y-dialog-hide style="top: 0; right: 0;">
+          <button type="button" class="position-absolute mt-2 mt-md-4 btn btn-black" data-a11y-dialog-hide style="top: 0; right: 0;">
             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" class="d-block" aria-label="<%= t("views.shared.close_dialog") %>">
               <path d="M21.677 0l2.19 2.121-9.532 9.517.375.362-.375.362 9.532 9.517L21.677 24 12 14.625 2.323 24l-2.19-2.121 9.531-9.517L9.29 12l.374-.362-9.53-9.517L2.322 0 12 9.375 21.677 0z" fill="#FFF" fill-rule="evenodd" />
             </svg>
           </button>
         </div>
-
-        <div class="pt-5 pb-4">
-          <h1 class="mt-3 mb-5 font-base text-center">
-            <%= t('views.layout.application.title') %>
-          </h1>
-          <p class="mb-5 font-s">
-            <%= t('views.map.login_wall_intro') %>
-          </p>
-
-          <%= link_to t('views.shared.log_in'), new_user_session_path, class: 'mt-4 btn btn-block btn-secondary' %>
-          <%= link_to t('views.shared.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
+      </div>
+      <div class="container pt-5 pb-4 pt-md-6 pb-md-6 py-lg-7">
+        <div class="row">
+          <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <h1 class="mt-3 font-base text-center">
+              <%= image_tag 'logo.png', alt: t('views.layout.application.title') %>
+            </h1>
+            <p class="mt-4 mt-lg-5 font-s">
+              <%= t('views.map.login_wall_intro') %>
+            </p>
+          </div>
+        </div>
+        <div class="row mt-4 mt-lg-5">
+          <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+            <%= link_to t('views.shared.log_in'), new_user_session_path, class: 'btn btn-block btn-secondary' %>
+            <%= link_to t('views.shared.register'), new_user_registration_path, class: 'btn btn-block btn-primary' %>
+          </div>
         </div>
       </div>
     </div>
@@ -76,30 +84,38 @@
 <div id="pin-details" class="dialog-container" aria-hidden="true">
   <div tabindex="-1" hidden></div>
   <div role="alertdialog" aria-label="<%= t("views.shared.pin_details") %>" class="c-pin-details">
-    <div class="py-4 background-white box-shadow-white">
+    <div class="py-4 py-lg-5 background-white box-shadow-white">
       <div class="container">
-        <strong class="d-block js-name"></strong>
-        <p class="mb-2 font-s js-status"></p>
-        <a class="mb-0 js-website" target="_blank" rel="noopener noreferrer" hidden></a>
-
-        <div class="mt-4 js-edit-group" hidden>
-          <div class="d-flex justify-content-between">
-            <a data-href="<%= edit_pin_path(':id') %>" class="btn btn-block btn-primary mr-3 js-edit">
-              <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class="d-inline-block mr-1 align-middle">
-                <path d="M0 18h3.8l11-11.1L11 3.1 0 14.2V18zM17.7 2.6L15.4.3c-.4-.4-1-.4-1.4 0l-1.8 1.8L16 5.9 17.7 4c.4-.4.4-1 0-1.4z" fill="#222" fill-rule="evenodd" />
-              </svg>
-              <%= t('views.shared.edit') %>
-            </a>
-            <a data-href="<%= pin_path(':id') %>" data-method="delete" data-confirm="<%= t('views.shared.delete_pin_confirmation') %>" class="btn btn-block btn-black mt-0 js-delete">
-              <%= t('views.shared.delete') %>
-            </a>
+        <div class="row">
+          <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+            <strong class="d-block js-name"></strong>
+            <p class="mb-2 font-s js-status"></p>
+            <a class="mb-0 js-website" target="_blank" rel="noopener noreferrer" hidden></a>
           </div>
         </div>
 
-        <div class="mt-4 js-report-error-group" hidden>
-          <<%== user_signed_in? ? 'a data-href="' + edit_pin_path(':id') + '"' : 'button type="button" data-a11y-dialog-show="login-wall"' %> class="btn btn-block btn-black js-report-error">
-            <%= t('views.shared.report_error') %>
-            </<%= user_signed_in? ? 'a' : 'button' %>>
+        <div class="row mt-4 js-edit-group" hidden>
+          <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+            <div class="d-flex justify-content-between">
+              <a data-href="<%= edit_pin_path(':id') %>" class="btn btn-block btn-primary mr-3 js-edit">
+                <svg width="18" height="18" xmlns="http://www.w3.org/2000/svg" class="d-inline-block mr-1 align-middle">
+                  <path d="M0 18h3.8l11-11.1L11 3.1 0 14.2V18zM17.7 2.6L15.4.3c-.4-.4-1-.4-1.4 0l-1.8 1.8L16 5.9 17.7 4c.4-.4.4-1 0-1.4z" fill="#222" fill-rule="evenodd" />
+                </svg>
+                <%= t('views.shared.edit') %>
+              </a>
+              <a data-href="<%= pin_path(':id') %>" data-method="delete" data-confirm="<%= t('views.shared.delete_pin_confirmation') %>" class="btn btn-block btn-black mt-0 js-delete">
+                <%= t('views.shared.delete') %>
+              </a>
+            </div>
+          </div>
+        </div>
+
+        <div class="row mt-4 js-report-error-group" hidden>
+          <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+            <<%== user_signed_in? ? 'a data-href="' + edit_pin_path(':id') + '"' : 'button type="button" data-a11y-dialog-show="login-wall"' %> class="btn btn-block btn-black js-report-error">
+              <%= t('views.shared.report_error') %>
+              </<%= user_signed_in? ? 'a' : 'button' %>>
+          </div>
         </div>
       </div>
     </div>
@@ -109,16 +125,16 @@
 <div id="main" class="l-map">
   <div id="map" class="vw-100 vh-100"></div>
   <div class="position-absolute w-100" style="top: 0;">
-    <div class="container">
+    <div class="container-fluid pt-sm-3 px-sm-4">
       <div class="position-relative">
-        <div class="mt-2 d-flex justify-content-between">
+        <div class="mt-2 d-flex justify-content-between justify-content-sm-start">
           <button type="button" class="btn btn-black drawer-button" data-a11y-dialog-show="drawer">
             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg" aria-label="<%= t('views.map.open_drawer') %>">
               <path d="M22 16.111v2.222H2v-2.222h20zm0-5.555v2.222H2v-2.222h20zM22 5v2.222H2V5h20z" fill-rule="evenodd" /></svg>
           </button>
           <% if user_signed_in? %>
           <% if params[:operation].nil? || params[:operation] != 'location' %>
-          <%= link_to new_pin_path, class: 'flex-grow-1 mx-3 btn btn-primary text-center pin-button' do %>
+          <%= link_to new_pin_path, class: 'flex-grow-1 flex-sm-grow-0 mx-3 mr-sm-auto px-sm-5 btn btn-primary text-center pin-button' do %>
           <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(2 2)" fill-rule="nonzero" fill="none">
               <path d="M9.684 16.387a.499.499 0 0 0 .632 0C10.55 16.197 16 11.672 16 6A6 6 0 1 0 4 6c0 5.672 5.451 10.197 5.684 10.387zM7 6a3 3 0 1 1 6 0 3 3 0 0 1-6 0z" fill="#222" />
@@ -129,7 +145,7 @@
           <%= t("views.shared.add_pin") %>
           <% end %>
           <% else %>
-          <%= link_to map_index_path, class: 'flex-grow-1 mx-3 btn btn-secondary text-center pin-button' do %>
+          <%= link_to map_index_path, class: 'flex-grow-1 flex-sm-grow-0 mx-3 mr-sm-auto px-sm-5 btn btn-secondary text-center pin-button' do %>
           <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg" class="d-block" aria-label="<%= t("views.shared.close_dialog") %>">
             <path d="M21.677 0l2.19 2.121-9.532 9.517.375.362-.375.362 9.532 9.517L21.677 24 12 14.625 2.323 24l-2.19-2.121 9.531-9.517L9.29 12l.374-.362-9.53-9.517L2.322 0 12 9.375 21.677 0z" fill="#222" fill-rule="evenodd" />
           </svg>
@@ -137,7 +153,7 @@
           <% end %>
           <% end %>
           <% else %>
-          <button type="button" class="flex-grow-1 mx-3 btn btn-primary text-center pin-button" data-a11y-dialog-show="login-wall">
+          <button type="button" class="flex-grow-1 flex-sm-grow-0 mx-3 mr-sm-auto px-sm-5 btn btn-primary text-center pin-button" data-a11y-dialog-show="login-wall">
             <svg class="d-inline-block mr-1" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
               <g transform="translate(2 2)" fill-rule="nonzero" fill="none">
                 <path d="M9.684 16.387a.499.499 0 0 0 .632 0C10.55 16.197 16 11.672 16 6A6 6 0 1 0 4 6c0 5.672 5.451 10.197 5.684 10.387zM7 6a3 3 0 1 1 6 0 3 3 0 0 1-6 0z" fill="#222" />
