--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -3,47 +3,59 @@
 <% end %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-<div class="form-group">
-  <%= f.label :name, class: 'required' %>
-  <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
+<div class="row">
+  <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+    <div class="form-group">
+      <%= f.label :name, class: 'required' %>
+      <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email, class: 'required'  %>
+      <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :current_password, class: 'required'  %>
+      <%= f.password_field :current_password, required: true, autocomplete: "current-password", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :organization %>
+      <%= f.text_field :organization, autocomplete: "organization", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :position %>
+      <%= f.text_field :position, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password, t('views.devise.registrations.new_password')  %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', 'aria-describedby': 'password-note' %>
+      <small id="password-note" class="form-text"><%= t('views.devise.registrations.can_leave_blank') %></small>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, t('views.devise.registrations.new_password_confirmation')  %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
+    </div>
+  </div>
 </div>
 
-<div class="form-group">
-  <%= f.label :email, class: 'required'  %>
-  <%= f.email_field :email, required: true, autofocus: true, autocomplete: "email", class: 'form-control' %>
+<div class="row mt-5">
+  <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+    <div class="form-group">
+      <%= f.submit t('views.devise.registrations.update'), class: 'btn btn-block btn-secondary' %>
+    </div>
+  </div>
 </div>
 
-<div class="form-group">
-  <%= f.label :current_password, class: 'required'  %>
-  <%= f.password_field :current_password, required: true, autocomplete: "current-password", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :organization %>
-  <%= f.text_field :organization, autocomplete: "organization", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :position %>
-  <%= f.text_field :position, class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :password, t('views.devise.registrations.new_password')  %>
-  <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', 'aria-describedby': 'password-note' %>
-  <small id="password-note" class="form-text"><%= t('views.devise.registrations.can_leave_blank') %></small>
-</div>
-
-<div class="form-group">
-  <%= f.label :password_confirmation, t('views.devise.registrations.new_password_confirmation')  %>
-  <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control' %>
-</div>
-
-<div class="form-group mt-5">
-  <%= f.submit t('views.devise.registrations.update'), class: 'btn btn-block btn-secondary' %>
-</div>
-
-<div class="form-group mt-5">
-  <%= link_to t('views.devise.registrations.close_account'), registration_path(current_user), method: :delete, data: { confirm: t('views.devise.registrations.close_account_confirmation') }, class: 'btn btn-block btn-danger' %>
+<div class="row mt-5">
+  <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+    <div class="form-group">
+      <%= link_to t('views.devise.registrations.close_account'), registration_path(current_user), method: :delete, data: { confirm: t('views.devise.registrations.close_account_confirmation') }, class: 'btn btn-block btn-danger' %>
+    </div>
+  </div>
 </div>
 <% end %>
