--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -3,37 +3,45 @@
 <% end %>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-<div class="form-group">
-  <%= f.label :name, class: 'required' %>
-  <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
+<div class="row">
+  <div class="col-md-8 offset-md-2 col-lg-6 offset-lg-3">
+    <div class="form-group">
+      <%= f.label :name, class: 'required' %>
+      <%= f.text_field :name, required: true, autofocus: true, autocomplete: "name", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :email, class: 'required' %>
+      <%= f.email_field :email, required: true, autocomplete: "email", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password, class: 'required' %>
+      <%= f.password_field :password, required:true, autocomplete: "new-password", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :password_confirmation, class: 'required' %>
+      <%= f.password_field :password_confirmation, required: true, autocomplete: "new-password", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :organization %>
+      <%= f.text_field :organization, autocomplete: "organization", class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :position %>
+      <%= f.text_field :position, class: 'form-control' %>
+    </div>
+  </div>
 </div>
 
-<div class="form-group">
-  <%= f.label :email, class: 'required' %>
-  <%= f.email_field :email, required: true, autocomplete: "email", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :password, class: 'required' %>
-  <%= f.password_field :password, required:true, autocomplete: "new-password", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :password_confirmation, class: 'required' %>
-  <%= f.password_field :password_confirmation, required: true, autocomplete: "new-password", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :organization %>
-  <%= f.text_field :organization, autocomplete: "organization", class: 'form-control' %>
-</div>
-
-<div class="form-group">
-  <%= f.label :position %>
-  <%= f.text_field :position, class: 'form-control' %>
-</div>
-
-<div class="form-group mt-5">
-  <%= f.submit t('views.shared.register'), class: 'btn btn-block btn-secondary' %>
+<div class="row mt-5">
+  <div class="col-md-6 offset-md-3 col-lg-4 offset-lg-4">
+    <div class="form-group">
+      <%= f.submit t('views.shared.register'), class: 'btn btn-block btn-secondary' %>
+    </div>
+  </div>
 </div>
 <% end %>
