--- a/app/views/admin/stores/index.html.erb
+++ b/app/views/admin/stores/index.html.erb
@@ -3,24 +3,34 @@
 <% end %>
 
 <% content_for :title_options do %>
-<%= link_to t('views.shared.download'), admin_pins_path(search: params[:search], type: params[:type], state: params[:state], format: 'csv'), class: 'btn btn-primary' %>
+<%= link_to t('views.shared.download'), admin_pins_path(search: params[:search], type: params[:type], state: params[:state], format: 'csv'), class: 'btn btn-primary px-md-5' %>
 <% end %>
 
 <%= form_tag admin_pins_path, method: :get do %>
-<div class="form-group">
-  <%= label_tag :state, t('views.admin.stores.state'), class: 'sr-only' %>
-  <%= select_tag :state, options_for_select(enum_options_for_select(Store, :state), params[:state]), { include_blank: t('views.admin.stores.all_states'), class: 'custom-select' }%>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="form-group">
+      <%= label_tag :state, t('views.admin.stores.state'), class: 'sr-only' %>
+      <%= select_tag :state, options_for_select(enum_options_for_select(Store, :state), params[:state]), { include_blank: t('views.admin.stores.all_states'), class: 'custom-select' }%>
+    </div>
+  </div>
+  <div class="col-lg-6">
+    <div class="form-group">
+      <%= label_tag :type, t('views.shared.type'), class: 'sr-only' %>
+      <%= select_tag :type, options_for_select([[t('views.pins.type_community'), 'Community'], [t('views.pins.type_business'), 'Enterprise']], params[:type]), { include_blank: t('views.admin.stores.all_types'), class: 'custom-select'} %>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-lg-6">
+    <div class="form-group">
+      <%= label_tag :search, t('views.shared.search'), class: 'sr-only' %>
+      <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: t('views.admin.stores.search_by_name') %>
+    </div>
+  </div>
 </div>
 <div class="form-group">
-  <%= label_tag :type, t('views.shared.type'), class: 'sr-only' %>
-  <%= select_tag :type, options_for_select([[t('views.pins.type_community'), 'Community'], [t('views.pins.type_business'), 'Enterprise']], params[:type]), { include_blank: t('views.admin.stores.all_types'), class: 'custom-select'} %>
-</div>
-<div class="form-group">
-  <%= label_tag :search, t('views.shared.search'), class: 'sr-only' %>
-  <%= text_field_tag :search, params[:search], class: 'form-control', placeholder: t('views.admin.stores.search_by_name') %>
-</div>
-<div class="form-group">
-  <%= submit_tag t('views.shared.search'), class: 'btn btn-black' %>
+  <%= submit_tag t('views.shared.search'), class: 'btn btn-black px-md-5' %>
 </div>
 <% end %>
 
