--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -17,7 +17,7 @@
 <body>
   <div class="vh-100">
     <div class="h-100 d-flex flex-column">
-      <div class="py-3 flex-shrink-0">
+      <div class="py-3 py-md-4 py-lg-5 flex-shrink-0">
         <div class="container">
           <div class="d-flex justify-content-between align-items-center">
             <div>
