--- a/app/views/pins/new.html.erb
+++ b/app/views/pins/new.html.erb
@@ -24,14 +24,14 @@
       <div class="custom-control custom-radio">
         <%= f.radio_button :type, 'Community', class: 'custom-control-input', required: true %>
         <%= f.label :type, class: 'custom-control-label', value: 'Community' do %>
-        <%= t('views.pins.type_community') %> <div class="c-marker marker-sm community-marker"></div>
+        <%= t('views.pins.type_community') %> <div class="position-relative c-marker marker-sm marker-community"></div>
         <% end %>
       </div>
 
       <div class="custom-control custom-radio">
         <%= f.radio_button :type, 'Enterprise', class: 'custom-control-input', required: true %>
         <%= f.label :type, class: 'custom-control-label', value: 'Enterprise' do %>
-        <%= t('views.pins.type_business') %> <div class="c-marker marker-sm business-marker"></div>
+        <%= t('views.pins.type_business') %> <div class="position-relative c-marker marker-sm marker-business"></div>
         <% end %>
       </div>
     </div>
