--- a/app/views/admin/stores/_table.html.erb
+++ b/app/views/admin/stores/_table.html.erb
@@ -21,10 +21,22 @@
         <td><%= link_to store.name, admin_pin_path(store) %></td>
         <td><%= enum_i18n(Store, :state, store.state) %></td>
         <td>
-          <%= link_to(store.created_by.display_name, admin_user_path(store.created_by)) if store.created_by %>
+          <%if store.created_by %>
+          <%= link_to(store.created_by.display_name, admin_user_path(store.created_by)) %>
+          <% else %>
+          <span class="text-muted">
+            <%= t('views.shared.deleted_account') %>
+          </span>
+          <% end %>
         </td>
         <td>
-          <%= link_to(store.updated_by.display_name, admin_user_path(store.updated_by)) if store.updated_by %>
+          <% if store.updated_by %>
+          <%= link_to(store.updated_by.display_name, admin_user_path(store.updated_by)) %>
+          <% else %>
+          <span class="text-muted">
+            <%= t('views.shared.deleted_account') %>
+          </span>
+          <% end %>
         </td>
         <td><%= store.latitude&.round(3) %></td>
         <td><%= store.longitude&.round(3) %></td>
