--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, t('views.devise.passwords.password_instructions') %>
+
 <% content_for :title do %>
 <%= t('views.devise.passwords.password_instructions') %>
 <% end %>
