--- a/app/views/map/index.html.erb
+++ b/app/views/map/index.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, t('views.shared.map') %>
+
 <div id="drawer" class="dialog-container" aria-hidden="true">
   <div tabindex="-1" data-a11y-dialog-hide></div>
   <div role="dialog" aria-label="<%= t("views.map.drawer_menu") %>" class="d-flex flex-column c-drawer">
