--- a/app/views/admin/stores/show.html.erb
+++ b/app/views/admin/stores/show.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, t('views.shared.pin_details') %>
+
 <% content_for :title do %>
 <%= t('views.shared.pin_details') %>
 <% end %>
