--- a/app/views/admin/users/new.html.erb
+++ b/app/views/admin/users/new.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, t('views.shared.new_user') %>
+
 <% content_for :title do %>
 <%= t('views.shared.new_user') %>
 <% end %>
