--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,3 +1,5 @@
+<% content_for :page_title, t('views.shared.edit_profile') %>
+
 <% content_for :title do %>
 <%= t('views.shared.edit_profile') %>
 <% end %>
