Fix accessibility issues
Based on the WebAIM Wave browser extension.

--- a/app/assets/stylesheets/_base.scss
+++ b/app/assets/stylesheets/_base.scss
@@ -21,7 +21,7 @@ label {
   }
 }
 
-a:not(.btn-primary):not(.btn-secondary):not(.btn-black) {
+a:not(.btn-primary):not(.btn-secondary):not(.btn-black):not(.btn-danger) {
   color: $body-color;
 }
 
