--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -7,9 +7,9 @@
 
 $primary: #f5cf00;
 $blackish: #111111;
-$grey-1: #888888;
+$grey-1: #757575;
 $grey-2: #d6d6d6;
-$danger: #ff331b;
+$danger: #e61700;
 $blue-1: #0030ff;
 $blue-2: #005bff;
 $green-1: #00ab32;
