--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,4 +1,4 @@
-<div class="vh-100">
+<main class="vh-100">
   <div class="h-100 d-flex flex-column">
     <div class="h-100 flex-shrink-1 flex-grow-1 overflow-auto d-flex flex-column">
       <div class="background-black py-4 py-lg-7 flex-shrink-0">
@@ -54,4 +54,4 @@
     <% end %>
     <% end %>
   </div>
-</div>
+</main>
