--- a/app/views/admin/stores/_enterprise.html.erb
+++ b/app/views/admin/stores/_enterprise.html.erb
@@ -1,7 +1,7 @@
 <div class="form-group">
   <%= f.label :name, t('views.pins.enterprise_name'), class: 'required' %>
-  <%= f.text_field :name, required: true, autofocus: true, disabled: action_name == 'show', 'aria-describedby': 'name_related_pin', class: 'form-control' %>
-  <% if !@related_store.nil? && !@store.name.eql?(@related_store.name) %>
+  <%= f.text_field :name, { required: true, autofocus: true, disabled: action_name == 'show', class: 'form-control' }.merge(conditional_attributes(has_previous_value?(:name), { 'aria-describedby': 'name_related_pin' })) %>
+  <% if has_previous_value?(:name) %>
   <div id="name_related_pin" class="form-text font-s">
     <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.name %></strong>
   </div>
@@ -14,7 +14,7 @@
 
 <div class="form-group">
   <label for="store_enterprise_type" class="required"><%= t('views.pins.enterprise_type') %></label>
-  <select id="store_enterprise_type" class="custom-select js-enterprise-type-list" required <%= action_name == 'show' ? 'disabled' : '' %> aria-describedby="enterprise_type_related_pin" multiple>
+  <select id="store_enterprise_type" class="custom-select js-enterprise-type-list" required <%= action_name == 'show' ? 'disabled' : '' %> <% if has_previous_value?(:enterprise_types) %>aria-describedby="enterprise_type_related_pin" <% end %> multiple>
     <optgroup label="<%= t('views.pins.tourism') %>">
       <option value="photo_tourism"><%= t('activerecord.enums.store.enterprise_types.photo_tourism') %></option>
       <option value="hunting_tourism"><%= t('activerecord.enums.store.enterprise_types.hunting_tourism') %></option>
@@ -30,7 +30,7 @@
       <option value="other"><%= t('activerecord.enums.store.enterprise_types.other') %></option>
     </optgroup>
   </select>
-  <% if !@related_store.nil? && !@store.enterprise_types.eql?(@related_store.enterprise_types) %>
+  <% if has_previous_value?(:enterprise_types) %>
   <div id="enterprise_type_related_pin" class="form-text font-s">
     <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.enterprise_types.split(',').map { |value| enum_i18n(Store, :enterprise_type, value, value) }.join(', ') %></strong>
   </div>
@@ -46,13 +46,13 @@
 
 <div class="form-group">
   <label for="store_ownership"><%= t('views.pins.ownership') %></label>
-  <select id="store_ownership" class="custom-select js-ownership-list" <%= action_name == 'show' ? 'disabled' : '' %> aria-describedby="ownership_related_pin">
+  <select id="store_ownership" class="custom-select js-ownership-list" <%= action_name == 'show' ? 'disabled' : '' %> <% if has_previous_value?(:ownership) %>aria-describedby="ownership_related_pin" <% end %>>
     <option value="private"><%= t('activerecord.enums.store.ownerships.private') %></option>
     <option value="protected_area"><%= t('activerecord.enums.store.ownerships.protected_area') %></option>
     <option value="community_group"><%= t('activerecord.enums.store.ownerships.community_group') %></option>
     <option value="other"><%= t('activerecord.enums.store.ownerships.other') %></option>
   </select>
-  <% if !@related_store.nil? && !@store.ownership.eql?(@related_store.ownership) %>
+  <% if has_previous_value?(:ownership) %>
   <div id="ownership_related_pin" class="form-text font-s">
     <%= t('views.admin.stores.previously') %>: <strong><%= enum_i18n(Store, :ownership, @related_store.ownership, @related_store.ownership) %></strong>
   </div>
@@ -66,8 +66,8 @@
 
 <div class="form-group">
   <%= f.label :latitude, class: 'required' %>
-  <%= f.number_field :latitude, required: true, disabled: action_name == 'show', 'aria-describedby': 'latitude_related_pin', min: -90, max: 90, step: 0.0001, class: 'form-control js-latitude-input' %>
-  <% if !@related_store.nil? && !@store.latitude.eql?(@related_store.latitude) %>
+  <%= f.number_field :latitude, { required: true, disabled: action_name == 'show', min: -90, max: 90, step: 0.0001, class: 'form-control js-latitude-input' }.merge(conditional_attributes(has_previous_value?(:latitude), { 'aria-describedby': 'latitude_related_pin' })) %>
+  <% if has_previous_value?(:latitude) %>
   <div id="latitude_related_pin" class="form-text font-s">
     <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.latitude %></strong>
   </div>
@@ -76,8 +76,8 @@
 
 <div class="form-group">
   <%= f.label :longitude, class: 'required' %>
-  <%= f.number_field :longitude, required: true, disabled: action_name == 'show', 'aria-describedby': 'longitude_related_pin', min: -180, max: 180, step: 0.0001, class: 'form-control js-longitude-input' %>
-  <% if !@related_store.nil? && !@store.longitude.eql?(@related_store.longitude) %>
+  <%= f.number_field :longitude, { required: true, disabled: action_name == 'show', min: -180, max: 180, step: 0.0001, class: 'form-control js-longitude-input' }.merge(conditional_attributes(has_previous_value?(:longitude), { 'aria-describedby': 'longitude_related_pin' })) %>
+  <% if has_previous_value?(:longitude) %>
   <div id="longitude_related_pin" class="form-text font-s">
     <%= t('views.admin.stores.previously') %>: <strong><%= @related_store.longitude %></strong>
   </div>
