--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -19,7 +19,7 @@
     <div class="h-100 d-flex flex-column">
       <div class="py-3 py-md-4 py-lg-5 flex-shrink-0">
         <div class="container">
-          <div class="d-flex justify-content-between align-items-center">
+          <nav class="d-flex justify-content-between align-items-center">
             <div>
               <a href="<%= back_redirect %>" class="mr-3 text-decoration-none">
                 <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
@@ -32,13 +32,13 @@
             <div>
               <%= yield :title_options %>
             </div>
-          </div>
+          </nav>
         </div>
       </div>
       <div class="flex-shrink-1 flex-grow-1 overflow-auto">
-        <div class="container py-4">
+        <main class="container py-4">
           <%= yield %>
-        </div>
+        </main>
       </div>
       <% flash.reject { |key| key == :timedout }.each do |type, value| %>
       <% if !value.kind_of?(Array) %>
