--- a/app/views/layouts/pins.html.erb
+++ b/app/views/layouts/pins.html.erb
@@ -17,7 +17,7 @@
 <body>
   <div class="vh-100">
     <div class="h-100 d-flex flex-column">
-      <div class="py-3 py-md-4 py-lg-5 flex-shrink-0">
+      <nav class="py-3 py-md-4 py-lg-5 flex-shrink-0">
         <div class="container">
           <a href="<%= root_path %>" class="mr-3 text-decoration-none">
             <svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
@@ -27,11 +27,11 @@
           </a>
           <h1 class="d-inline-block m-0 font-base font-weight-normal"><%= yield :title %></h1>
         </div>
-      </div>
+      </nav>
       <div class="flex-shrink-1 flex-grow-1 overflow-auto">
-        <div class="container py-4">
+        <main class="container py-4">
           <%= yield %>
-        </div>
+        </main>
       </div>
       <% flash.reject { |key| key == :timedout }.each do |type, value| %>
       <% if !value.kind_of?(Array) %>
